Added hw 3. Reworked project structure